src/objects/inscor__Pricing_Template__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Charges_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charges Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Charges_Markup__c</fullName>
        <label>Charges Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cycle Limit Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Templates (Cycle Limit Item)</relationshipLabel>
        <relationshipName>Cycle_Limit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit__c</fullName>
        <label>Cycle Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Overage_Price__c</fullName>
        <label>Cycle Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate_Amount__c</fullName>
        <label>Flat Rate Amount - RETIRED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flat Rate Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Templates</relationshipLabel>
        <relationshipName>Flat_Rate_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labor Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Markup__c</fullName>
        <label>Labor Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__NTE_Amount__c</fullName>
        <label>NTE Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Markup__c</fullName>
        <label>Parts Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
                <value>
                    <fullName>Cost + %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Limit Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Templates (Time Limit Item)</relationshipLabel>
        <relationshipName>Time_Limit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit__c</fullName>
        <label>Time Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Overage_Price__c</fullName>
        <label>Time Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Template</label>
    <listViews>
        <fullName>inscor__All_Pricing_Templates</fullName>
        <columns>NAME</columns>
        <columns>inscor__Template_Type__c</columns>
        <columns>inscor__Pricing_Type__c</columns>
        <columns>inscor__Time_Limit__c</columns>
        <columns>inscor__Cycle_Limit__c</columns>
        <columns>inscor__Flat_Rate_Amount__c</columns>
        <columns>inscor__NTE_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Pricing Templates</label>
    </listViews>
    <nameField>
        <label>Pricing Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>